tests/baselines/reference/privateNameNotAccessibleOutsideDefiningClass.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameNotAccessibleOutsideDefiningClass.ts(5,9): error TS2339: Property '#foo' does not exist on type 'A'.


==== tests/cases/conformance/classes/members/privateNames/privateNameNotAccessibleOutsideDefiningClass.ts (1 errors) ====
    class A {
        #foo: number = 3;
    }
    
    new A().#foo = 4;               // Error
            ~~~~
!!! error TS2339: Property '#foo' does not exist on type 'A'.
    